eks-yaml/fastapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
spec:
  selector:
    app: fastapi
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  selector:
    matchLabels:
      app: fastapi
  #replicas: 2
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: 062061726924.dkr.ecr.ap-northeast-2.amazonaws.com/fastapi:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
