eks-yaml/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  type: ExternalName
  externalName: db.rdsendpoint.com
  ports:
  - port: 3306
