eks-yaml/was.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywas-deploy
spec:
  selector:
    matchLabels:
      app: mywas
  template:
    metadata:
      labels:
        app: mywas
    spec:
      containers:
      - name: mywas
        image: gah1234/backendimage:v4
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mywas-svc
spec:
  selector:
    app: mywas
  ports:
  - port: 8080
    targetPort: 8080
