eks-yaml/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: myweb-ing
    namespace: default
    annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:062061726924:certificate/809de406-aa92-4b2b-b483-e2955e77726e
      alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
    ingressClassName: alb
    rules:
    - host: "www.nalraon.kr"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: "myweb-svc"
                port:
                  number: 80
